fixed path to og image again

--- a/templates/base.html.jinja2
+++ b/templates/base.html.jinja2
@@ -17,7 +17,7 @@
     <meta property="og:Description" content="{{ description }}" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="timetable.festivalfuerfreunde.de" />
-    <meta property="og:image" content="/static/image/open_graph.png" />
+    <meta property="og:image" content="/static/img/open_graph.png" />
 
     <script defer src="static/js/alpinejs.min.js"></script>
 </head>
